add config files for simulate 100/1000/5000/10000 sessions

--- a/PPPoEPerf/CMakeLists.txt
+++ b/PPPoEPerf/CMakeLists.txt
@@ -4,5 +4,5 @@ INSTALL(TARGETS pppoe_perf
 		COMPONENT libraries
 )
 INSTALL(DIRECTORY DESTINATION /etc/pppoe_perf)
-INSTALL(FILES conf.json DESTINATION /etc/pppoe_perf)
+INSTALL(FILES conf.json conf_100.json conf_1000.json conf_5000.json conf_10000.json DESTINATION /etc/pppoe_perf)
 target_link_libraries(pppoe_perf ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${OPENSSL_LIBRARIES})
